# ElectoneManager

./: .gitignore  CMakeLists.txt  Prompt.txt  README.md
.claude/: settings.local.json
config/: AndroidManifest.xml  Info.ios.plist  Info.macos.plist  Info.plist
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/electonemanager/electone_manager/: MainActivity.kt
flutter_app/ios/: Podfile
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/bindings/: em_bridge.dart
flutter_app/lib/models/: drum_pattern.dart  engine_state.dart  transport_state.dart  voice_slot.dart
flutter_app/lib/providers/: engine_controller.dart  log_provider.dart
flutter_app/lib/screens/: drum_sequencer_screen.dart  home_screen.dart  voice_editor_screen.dart
flutter_app/lib/utils/: b00_parser.dart  colors.dart  constants.dart
flutter_app/lib/widgets/: control_panel.dart  drum_grid.dart  footpad_panel.dart  lcd_panel.dart  status_bar.dart  transport_bar.dart  voice_card.dart
flutter_app/macos/Runner/: DebugProfile.entitlements
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/test/: widget_test.dart
ios/: project.yml
ios/ElectoneManager.xcodeproj/: project.pbxproj
ios/ElectoneManager.xcodeproj/project.xcworkspace/xcuserdata/padgetthan.xcuserdatad/: UserInterfaceState.xcuserstate
ios/ElectoneManager.xcodeproj/xcuserdata/padgetthan.xcuserdatad/xcschemes/: xcschememanagement.plist
scripts/: build_ios_lib.sh  build_macos_lib.sh
src/: main.cpp
src/common/: AudioDeviceScanner.h  DrumKitEngine.cpp  DrumKitEngine.h  DrumPattern.h  DrumPatternBank.h  DrumSequencer.h  IAudioEngine.h  IMidiDevice.h  IMidiOutput.h  MidiFileParser.cpp  MidiFileParser.h  MidiFilePlayer.h  MidiMessage.h  MidiToChineseInstrumentMapper.cpp  MidiToChineseInstrumentMapper.h  RingBuffer.h  SamplerEngine.cpp  SamplerEngine.h  TransportEngine.h  VoiceSlotEngine.h
src/ios/: ElectoneManager-Bridging-Header.h  em_bridge.cpp  em_bridge.h
src/ios/App/: ElectoneManagerApp.swift
src/ios/Engine/: EngineController.swift
src/ios/Views/: ContentView.swift  RhythmPage.swift  ScorePage.swift  VoicePage.swift
src/ios/Views/Components/: DrumGrid.swift  StatusBar.swift  TransportBar.swift  VoiceCard.swift
src/platform/android/: AndroidMidiDevice.cpp  AndroidMidiDevice.h  AndroidMidiOutput.cpp  AndroidMidiOutput.h  OboeAudioEngine.cpp  OboeAudioEngine.h
src/platform/apple/: CoreAudioEngine.h  CoreAudioEngine.mm  CoreMidiDevice.cpp  CoreMidiDevice.h  CoreMidiOutput.cpp  CoreMidiOutput.h
src/platform/linux/: AlsaAudioEngine.cpp  AlsaAudioEngine.h  AlsaMidiDevice.cpp  AlsaMidiDevice.h  AlsaMidiOutput.cpp  AlsaMidiOutput.h
src/platform/windows/: AsioAudioEngine.cpp  AsioAudioEngine.h  WasapiAudioEngine.cpp  WasapiAudioEngine.h  WinMidiDevice.cpp  WinMidiDevice.h  WinMidiOutput.cpp  WinMidiOutput.h
src/ui/: CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  ElectoneWindow.cpp  ElectoneWindow.h  FootpadPanel.cpp  FootpadPanel.h  KeyboardPanel.cpp  KeyboardPanel.h  LcdPanel.cpp  LcdPanel.h  ScorePanel.cpp  ScorePanel.h  StepSequencerWindow.cpp  StepSequencerWindow.h  UIEventQueue.h  VoiceEditorWindow.cpp  VoiceEditorWindow.h
test_score/pipayu/: ELS_SONG.NAM  SONG_ANALYSIS.md
test_score/pipayu/SONG_001/: MDR_000.MID
test_score/pipayu/SONG_002/: MDR_000.MID  REG_001.B00
